# Pokifications

./: .gitignore  Cargo.toml  README.md  pokifications.sql  pokifications.toml  pokifications.toml.example
config/: pokefications.toml
src/: alerts.rs  cleanup.rs  config.rs  db.rs  entities.rs  file_creator.rs  lists.rs  main.rs  telegram.rs
src/bot/: config.rs  file_cache.rs  map.rs  message.rs  mod.rs  once_barrier.rs  select_all.rs
src/pokifications/: entities.rs  mod.rs
src/pokifications/dispatcher/: config.rs  mod.rs  worker.rs
