[package]
name = "pokifications"
version = "2.6.0"
authors = ["Marco Napetti <marco.napetti@gmail.com>"]
edition = "2021"

[profile.release]
strip = true

[dependencies]
arc-swap = "1.5.1"
async-trait = "0.1.57"
chrono = "0.4.22"
chrono-tz = "0.6.3"
futures-util = "0.3.24"
geo = { version = "0.23.0", features = ["use-serde"] }
geo-raycasting = "0.4.0"
hyper = { version = "0.14.20", features = ["http1", "server", "stream", "tcp"] }
image = { version = "^0.23.6", default-features = false, features = ["png", "jpeg"] } # forced by imageproc
imageproc = "^0.22.0"
lru = "0.8.0"
lru_time_cache = "0.11.11"
mysql_async = "0.30.0"
mysql_common = { version = "0.29.1", features = ["chrono"] }
once_cell = "1.15.0"
qrcode = "0.12.0"
rand = "0.8.5"
reqwest = { version = "0.11.12", features = ["json", "multipart"] }
rocketmap-entities = { git = "https://github.com/nappa85/rocketmap-entities.git" }
rusttype = "0.9.2"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
stream_throttle = "0.4.0"
tokio = { version = "1.21.1", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread", "time", "sync", "parking_lot"] }
toml = "0.5.9"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
