[package]
name = "pokifications"
version = "2.6.4"
authors = ["Marco Napetti <marco.napetti@gmail.com>"]
edition = "2021"

[profile.release]
strip = true

[dependencies]
arc-swap = "1.7.1"
async-trait = "0.1.79"
chrono = "0.4.37"
chrono-tz = "0.8.6"
futures-util = "0.3.30"
geo = { version = "0.23.1", features = ["use-serde"] }
geo-raycasting = "0.3.0"
hyper = { version = "0.14.28", features = ["http1", "server", "stream", "tcp"] }
image = { version = "0.23.14", default-features = false, features = ["png", "jpeg"] } # forced by imageproc
imageproc = "0.22.0"
lru = "0.9.0"
lru_time_cache = "0.11.11"
mysql_async = { version = "0.34.1", features = ["chrono"] }
once_cell = "1.19.0"
qrcode = "0.12.0"
rand = "0.8.5"
reqwest = { version = "0.11.27", features = ["json", "multipart"] }
rocketmap-entities = { git = "https://github.com/nappa85/rocketmap-entities.git" }
rusttype = "0.9.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
stream_throttle = "0.4.0"
tokio = { version = "1.37.0", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread", "time", "sync", "parking_lot"] }
toml = "0.8.12"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
